--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -2,15 +2,15 @@
   <view class='top' bindtap='changeInfoFunction'>
     <view class='left'>
       <view class='img'>
-        <image src='/images/imgs/lawliet.jpg '></image>
+        <image src='{{user.image1}}'></image>
       </view>
     </view>
     <view class='mid'>
       <view class='name'>
-        <text>路通</text>
+        <text>{{user.nickname}}</text>
       </view>
       <view class='qianming'>
-        <text>最后的时光撒打发时间发i风飒飒撒打</text>
+        <text>{{user.autograph}}</text>
       </view>
     </view>
     <view class='right'>
@@ -25,7 +25,7 @@
         <image src='/images/icons/paimai.png'></image>
       </view>
       <view class='item1-mid'>
-        <text>正在拍卖</text> 
+        <text>我要拍卖</text> 
       </view>
       <view class='item1-right'>
         <image src='/images/icons/getdetail.png'></image>
