--- a/pages/myinfo/myinfo.wxml
+++ b/pages/myinfo/myinfo.wxml
@@ -5,7 +5,7 @@
     </view>
     <view class='item1-mid'>
       <view class='img' hidden='{{touxiangHidden}}'>
-        <image src='{{touxiang}}'></image>
+        <image src='{{user.photo}}'></image>
       </view>
     </view>
     <view class='item1-right'>
@@ -21,7 +21,7 @@
       <text>账号</text>
     </view>
     <view class='item-mid'>
-      <text>{{zhanghao}}</text>
+      <text>{{user.studentid}}</text>
     </view>
     <view class='item-right'>
     </view>
@@ -32,7 +32,7 @@
       <text>昵称</text>
     </view>
     <view class='item-mid'>
-      <text>{{nicheng}}</text>
+      <text>{{user.nickname}}</text>
     </view>
     <view class='item-right'>
       <view class='dayuhao'>
@@ -45,7 +45,7 @@
       <text>签名</text>
     </view>
     <view class='item-mid qianming'>
-      <text>{{qianming}}</text>
+      <text>{{user.autograph}}</text>
     </view>
     <view class='item-right'>
       <view class='dayuhao'>
@@ -57,7 +57,7 @@
 
   <view class='item item2' bindtap='changeMoreFunction'>
      <view class='item-left'>
-      <text>更多</text>
+      <text>更多信息</text>
     </view>
     <view class='item-mid'>
       <text></text>
