--- a/pages/myinfo/myinfoNicheng.wxml
+++ b/pages/myinfo/myinfoNicheng.wxml
@@ -1,6 +1,6 @@
 <view class="content">
   <view class='top'>
-    <input type='text' value="{{nicheng}}" bindinput='bindKeyInput' auto-focus="{{focus}}"></input>
+    <input type='text' value="{{user.nickname}}" bindinput='bindKeyInput' auto-focus="{{focus}}"></input>
   </view>
   <view class='mid'></view>
   <view class='bottom'>
