--- a/pages/mysell/mysell.wxss
+++ b/pages/mysell/mysell.wxss
@@ -1,11 +1,13 @@
-.content {
+.content{
   width: 100%;
   height: 100vh;
   background-color: #eee;
 }
 
-.items {
+.top{
   width: 100%;
+  height: 90%;
+
 }
 
 .item {
@@ -15,7 +17,7 @@
 }
 
 .item-head {
-  height: 120rpx;
+  height: 96rpx;
   width: 100%;
   background-color: #fff;
   border-bottom: 1rpx solid #ddd;
@@ -24,10 +26,14 @@
   align-items: center;
   justify-content: flex-start;
   border-radius: 20rpx;
+  font-size: 100%;
+  font-weight: bold;
+  letter-spacing: 3rpx;
+  color: #222;
 }
 
 .item-head-left {
-  width: 20%;
+  width: 30%;
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -48,15 +54,6 @@
   color: #777;
 }
 
-.xiangxia {
-  width: 50rpx;
-  height: 50rpx;
-}
-
-.xiangxia image {
-  width: 100%;
-  height: 100%;
-}
 
 .item-foot {
   width: 100%;
@@ -66,7 +63,7 @@
 
 .item-foot-item {
   width: 100%;
-  height: 100rpx;
+  height: 85rpx;
   border-bottom: 2rpx #ddd solid;
   display: flex;
   flex-direction: row;
@@ -75,14 +72,19 @@
 }
 
 .item-left {
-  width: 20%;
+  width: 19%;
+  padding-left: 1%;
   height: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: 95%;
-  color: #222;
+  font-size: 90%;
+  color: #333;
+  letter-spacing: 1rpx;
+}
+.item-left input{
+  padding-left: 10rpx;
 }
 
 .item-right {
@@ -105,29 +107,43 @@
   border-bottom: 1rpx solid #ddd;
 }
 
-.bottom {
-  width: 100%;
-  padding-top: 30rpx;
+
+.select{
+  width: 90%;
+  height: 80%;
+  background-color: #eaeaea;
+  border-bottom: 1rpx solid #ddd;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  font-size: 95%;
+}
+.select-in{
+  width: 540rpx;
+  height: 80rpx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-.bottom-left {
-  width: 50%;
-  height: 100%;
-}
 
-.bottom-right {
-  width: 50%;
-  height: 100%;
-}
 
-.bottom-left button {
+
+
+.bottom{
+  width: 90%;
+  margin-left: 5%;
+  height: 9%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   border-radius: 20rpx;
-}
-
-.bottom-right button {
-  border-radius: 20rpx;
+  letter-spacing: 5rpx;
+  
+ font-size: 110%;
+  color: #fff;
+  background-color: red;
 }
